# ModernCppCI

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
app/: CMakeLists.txt  main.cpp
app/include/: Calc.hpp
app/src/: calc.cpp  main.cpp
app/test/: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/: calc.h  calc.hpp  calc_step.h  calc_step.hpp  log.hpp  logger.h  logger.hpp
lib/src/: calc.cpp  calc_step.cpp  log.cpp  logger.cpp
lib/test/: CMakeLists.txt
lib/test/src/: calc_step_test.cpp  calc_test.cpp  logger_test.cpp  main.cpp
main/: CMakeLists.txt  main.cpp
main/include/: Calc.hpp
main/src/: calc.cpp
test/: CMakeLists.txt
test/src/: CalcTest.cpp
